[gd_scene load_steps=28 format=2]

[ext_resource path="res://Assets/goblin_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Actors/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Actors/Healthbar.gd" type="Script" id=3]
[ext_resource path="res://Assets/healthbar/over.png" type="Texture" id=4]
[ext_resource path="res://Assets/healthbar/under.png" type="Texture" id=5]
[ext_resource path="res://Assets/healthbar/progress.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 64, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 80, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 7 ), null, SubResource( 8 ), null, SubResource( 9 ), null, SubResource( 10 ), null ],
"loop": true,
"name": "knockback",
"speed": 8.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 24, 7.60492 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 22.8548, 23.631 )

[sub_resource type="CircleShape2D" id=20]
radius = 300.0

[sub_resource type="CircleShape2D" id=21]
radius = 48.0

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 7
script = ExtResource( 2 )
MAX_SPEED = 300
acceleration = 3000

[node name="NavMap" type="Navigation2D" parent="."]

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -9.53674e-07, -9.53674e-07 )
scale = Vector2( 4, 4 )
frames = SubResource( 17 )
animation = "knockback"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 17 )
shape = SubResource( 18 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 19 )

[node name="PlayerDetect" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
shape = SubResource( 20 )

[node name="DamageZone" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageZone"]
shape = SubResource( 21 )

[node name="knockbackTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="Label" type="Label" parent="."]
margin_left = -48.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = -34.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthNode" type="Node2D" parent="."]
scale = Vector2( 0.3, 0.2 )

[node name="Healthbar" type="TextureProgress" parent="HealthNode"]
margin_left = -80.0
margin_top = -200.0
margin_right = 80.0
margin_bottom = -136.0
texture_under = ExtResource( 5 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 6 )
fill_mode = 6
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="PlayerDetect" to="." method="_on_PlayerDetect_body_entered"]
[connection signal="timeout" from="knockbackTimer" to="." method="_on_knockbackTimer_timeout"]
